[package]
name = "spotify_export_models"
description = "Rust structs for Spotify's export data with Serde support"
authors = ["Blooym"]
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = [
    "derive",
    "alloc",
], default-features = false, optional = true }

[features]
serde = ["dep:serde"]
